--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Command parser
+name=ArduinoCommands
 version=0.0.1
 author=arttupii
 maintainer=arttupii <arttupii@gmail.com>
 sentence=Arduino command parser.  
 category=Communication
-url=https://github.com/arttupii/ArduinoCommands
+url=https://github.com/JoostAB/ArduinoCommands
 architectures=*
 includes=CommandParser.h
